--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ body {
     }
 
 }
-.wrapper .screen{
+
+.wrapper .screen {
     flex: 1;
     min-width: 100%;
 }
@@ -94,10 +95,32 @@ body {
     border-radius: 50%;
 }
 
-.categories-wrapper{
+.categories-wrapper {
     margin-top: 1rem;
     height: calc(100% - 8rem);
     padding: 0 30px;
     padding-bottom: 20px;
     overflow: auto;
+}
+
+.categories {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.categories .category {
+    background-color: #fff;
+    border-radius: .5rem;
+    padding: 1.5rem 1rem;
+    justify-content: space-between;
+    box-shadow: 0 10px 20px 5px #00000023;
+    transition: all .5s;
+}
+
+.categories .category:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px 5px #00000040;
+
 }
