--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "roboto", sans-serif;
+    scroll-behavior: smooth;
 }
-
+::-webkit-scrollbar{
+    width: 0; 
+}
 body {
     display: flex;
     align-items: center;
@@ -62,8 +65,8 @@ body {
     cursor: pointer;
 }
 
-.menu-btn span {
-    font-size: 50px;
+.menu-btn {
+    font-size: 60px;
     color: rgb(51, 47, 47);
 
 }
@@ -101,12 +104,15 @@ body {
     padding: 0 30px;
     padding-bottom: 20px;
     overflow: auto;
+    
+
 }
 
 .categories {
-    padding: 1rem;
     display: flex;
     flex-direction: column;
+    padding: 1rem;
+    margin: 1rem 0;
     gap: 1rem;
 }
 
@@ -122,5 +128,49 @@ body {
 .categories .category:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 20px 5px #00000040;
-
+    
 }
+
+.category .left {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.category .left img {
+    width: 3rem;
+    border-radius: 20px;
+}
+
+.content h2 {
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.content p {
+    color: rgb(61, 59, 59);
+    font-size: .8rem;
+    opacity: 0.6;
+}
+
+.category .options {
+    position: relative;
+    left: 150px;
+    transition: all 0.3s;
+    border-radius: .5rem;
+    padding: .2rem .1rem;
+}
+
+.category .options:hover{
+    background-color: #ece4e4;
+    color: black  ;
+}
+.category .toggle-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        width: 2rem;
+        font-size: 1.8rem;
+        color: #2c2b2b;
+    }
