--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 }
 
 .menu-btn {
+    padding: 10px;
     cursor: pointer;
 }
 
@@ -75,6 +76,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin-top: 2rem;
+    padding: 20px;
 }
 
 .welcome h1 {
@@ -110,10 +112,11 @@ body {
 
 .categories {
     display: flex;
+    width: 100%;
     flex-direction: column;
-    padding: 1rem;
-    margin: 1rem 0;
-    gap: 1rem;
+    padding: .5rem 0;
+    margin: 0rem  0.5rem;
+    gap: .5rem;
 }
 
 .categories .category {
@@ -134,6 +137,8 @@ body {
 .category .left {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+
     gap: 1.5rem;
 }
 
@@ -154,8 +159,6 @@ body {
 }
 
 .category .options {
-    position: relative;
-    left: 150px;
     transition: all 0.3s;
     border-radius: .5rem;
     padding: .2rem .1rem;
