--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@
     font-family: "roboto", sans-serif;
     scroll-behavior: smooth;
 }
-::-webkit-scrollbar{
-    width: 0; 
+
+::-webkit-scrollbar {
+    width: 0;
 }
+
 body {
     display: flex;
     align-items: center;
@@ -42,6 +44,29 @@ body {
 .wrapper .screen {
     flex: 1;
     min-width: 100%;
+
+}
+
+.wrapper.show-category .home-screen {
+    transform: translateY(-100%);
+
+}
+
+.wrapper.show-category .category-screen {
+    transform: translateY(-300%);
+    text-align: center;
+    margin: 40px 0;
+    padding:  10px;
+    border-radius: 50px;
+    background-color: #ece4e4;
+    cursor: pointer;
+
+}
+
+.wrapper.show-category .screen-backdrop {
+    transform: translate(-50%, -60%);
+    border: 10px solid rgb(196, 226, 236);
+    background-color: rgb(150, 201, 199);
 }
 
 .screen-backdrop {
@@ -106,17 +131,16 @@ body {
     padding: 0 30px;
     padding-bottom: 20px;
     overflow: auto;
-    
 
 }
 
 .categories {
     display: flex;
-    width: 100%;
     flex-direction: column;
-    padding: .5rem 0;
-    margin: 0rem  0.5rem;
+    width: 100%;
+    padding: 1rem 0;
     gap: .5rem;
+    margin: 3rem 0;
 }
 
 .categories .category {
@@ -131,7 +155,7 @@ body {
 .categories .category:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 20px 5px #00000040;
-    
+
 }
 
 .category .left {
@@ -164,16 +188,17 @@ body {
     padding: .2rem .1rem;
 }
 
-.category .options:hover{
+.category .options:hover {
     background-color: #ece4e4;
-    color: black  ;
+    color: black;
 }
+
 .category .toggle-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        width: 2rem;
-        font-size: 1.8rem;
-        color: #2c2b2b;
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 2rem;
+    font-size: 1.8rem;
+    color: #2c2b2b;
+}
