--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 .wrapper .screen {
     flex: 1;
     min-width: 100%;
+    transition: all .5s;
 
 }
 
@@ -53,14 +54,9 @@ body {
 }
 
 .wrapper.show-category .category-screen {
-    transform: translateY(-300%);
-    text-align: center;
-    margin: 40px 0;
-    padding:  10px;
-    border-radius: 50px;
-    background-color: #ece4e4;
+    transform: translateY(-200%);
+    margin: 40px 50px;
     cursor: pointer;
-
 }
 
 .wrapper.show-category .screen-backdrop {
@@ -79,7 +75,8 @@ body {
     transform: translateX(-50%);
     border-radius: 0 0 50% 50%;
     background-color: aquamarine;
-
+    border: 20px solid rgb(224, 235, 23);
+    transition: all .5s;
 }
 
 .head-wrapper {
@@ -89,116 +86,132 @@ body {
 .menu-btn {
     padding: 10px;
     cursor: pointer;
-}
-
-.menu-btn {
     font-size: 60px;
-    color: rgb(51, 47, 47);
+    color: rgb(36, 34, 34);
 
 }
 
-.welcome {
+.category-screen .head-wrapper{
     display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
-    padding: 20px;
-}
-
-.welcome h1 {
-    font-size: 1.5rem;
-    color: rgb(51, 47, 47);
-
-}
-
-.welcome p {
-    color: rgb(72, 66, 66);
-    margin-top: 20px;
-    font-weight: 500;
-}
-
-.welcome .img {
-    position: relative;
-}
-
-.welcome .img img {
-    width: 5rem;
-    border-radius: 50%;
-}
-
-.categories-wrapper {
-    margin-top: 1rem;
-    height: calc(100% - 8rem);
-    padding: 0 30px;
-    padding-bottom: 20px;
-    overflow: auto;
-
-}
-
-.categories {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 1rem 0;
-    gap: .5rem;
-    margin: 3rem 0;
-}
-
-.categories .category {
-    background-color: #fff;
-    border-radius: .5rem;
-    padding: 1.5rem 1rem;
-    justify-content: space-between;
-    box-shadow: 0 10px 20px 5px #00000023;
-    transition: all .5s;
-}
-
-.categories .category:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px 5px #00000040;
-
-}
-
-.category .left {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    gap: 1.5rem;
-}
-
-.category .left img {
-    width: 3rem;
-    border-radius: 20px;
-}
-
-.content h2 {
-    font-weight: 500;
-    font-size: 32px;
-}
-
-.content p {
-    color: rgb(61, 59, 59);
-    font-size: .8rem;
-    opacity: 0.6;
-}
-
-.category .options {
-    transition: all 0.3s;
-    border-radius: .5rem;
-    padding: .2rem .1rem;
-}
-
-.category .options:hover {
-    background-color: #ece4e4;
-    color: black;
-}
-
-.category .toggle-btn {
-    display: flex;
-    align-items: center;
+    width: 20%;
     justify-content: center;
-    cursor: pointer;
-    width: 2rem;
-    font-size: 1.8rem;
-    color: #2c2b2b;
+    align-items: center;
 }
+
+.category-screen .head-wrapper .back-btn:hover {
+    border-radius: 2rem;
+    background-color: #fff;
+    color: black;
+    padding: 0px 40px;
+}
+
+.back-btn {
+    font-size: 60px;
+    color: rgb(252, 232, 7);
+    transition: .3s;
+    }
+
+    .welcome {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 2rem;
+        padding: 20px;
+    }
+
+    .welcome h1 {
+        font-size: 1.5rem;
+        color: rgb(51, 47, 47);
+
+    }
+
+    .welcome p {
+        color: rgb(72, 66, 66);
+        margin-top: 20px;
+        font-weight: 500;
+    }
+
+    .welcome .img {
+        position: relative;
+    }
+
+    .welcome .img img {
+        width: 5rem;
+        border-radius: 50%;
+    }
+
+    .categories-wrapper {
+        height: calc(100% - 8rem);
+        padding: 0 30px;
+        padding-bottom: 20px;
+        overflow: auto;
+
+    }
+
+    .categories {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 1rem 0;
+        gap: .5rem;
+        margin: 3rem 0;
+
+    }
+
+    .categories .category {
+        background-color: #fff;
+        border-radius: .5rem;
+        padding: 1.5rem 1rem;
+        justify-content: space-between;
+        box-shadow: 0 10px 20px 5px #00000023;
+        transition: all .5s;
+    }
+
+    .categories .category:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px 5px #00000040;
+
+    }
+
+    .category .left {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1.5rem;
+    }
+
+    .category .left img {
+        width: 3rem;
+        border-radius: 20px;
+    }
+
+    .content h2 {
+        font-weight: 500;
+        font-size: 32px;
+    }
+
+    .content p {
+        color: rgb(61, 59, 59);
+        font-size: .8rem;
+        opacity: 0.6;
+    }
+
+    .category .options {
+        transition: all 0.3s;
+        border-radius: .5rem;
+        padding: .2rem .1rem;
+    }
+
+    .category .options:hover {
+        background-color: #ece4e4;
+        color: black;
+    }
+
+    .category .toggle-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        width: 2rem;
+        font-size: 1.8rem;
+        color: #2c2b2b;
+    }
