--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ body {
 
 .head-wrapper {
     padding: 0 1rem;
+
 }
 
 .menu-btn {
@@ -91,127 +92,232 @@ body {
 
 }
 
-.category-screen .head-wrapper{
+.category-screen .head-wrapper {
     display: flex;
-    width: 20%;
-    justify-content: center;
+    width: 90%;
+    justify-content: space-between;
     align-items: center;
+}
+
+.category-screen .head-wrapper .options {
+    font-size: 40px;
+    padding: 8px;
+    border-radius: .4rem;
+}
+
+.category-screen .head-wrapper .options:hover {
+    background-color: #34a797;
+    color: #fff;
+}
+
+.back-btn {
+    font-size: 50px;
+    color: rgb(252, 232, 7);
+    transition: .5s;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .category-screen .head-wrapper .back-btn:hover {
     border-radius: 2rem;
     background-color: #fff;
     color: black;
-    padding: 0px 40px;
+    padding: 5px 20px;
 }
 
-.back-btn {
-    font-size: 60px;
-    color: rgb(252, 232, 7);
-    transition: .3s;
+.category-details {
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+    gap: 1rem;
+}
+
+.category-details img {
+    width: 4rem;
+    border-radius: 50px;
+}
+
+
+
+.welcome {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2rem;
+    padding: 20px;
+}
+
+.welcome h1 {
+    font-size: 1.5rem;
+    color: rgb(51, 47, 47);
+
+}
+
+.welcome p {
+    color: rgb(72, 66, 66);
+    margin-top: 20px;
+    font-weight: 500;
+}
+
+.welcome .img {
+    position: relative;
+}
+
+.welcome .img img {
+    width: 5rem;
+    border-radius: 50%;
+}
+
+.categories-wrapper {
+    height: calc(100% - 8rem);
+    padding: 0 30px;
+    padding-bottom: 20px;
+    overflow: auto;
+
+}
+
+.categories {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1rem 0;
+    gap: .5rem;
+    margin: 3rem 0;
+
+}
+
+.categories .category {
+    background-color: #fff;
+    border-radius: .5rem;
+    padding: 1.5rem 1rem;
+    justify-content: space-between;
+    box-shadow: 0 10px 20px 5px #00000023;
+    transition: all .5s;
+}
+
+.categories .category:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px 5px #00000040;
+
+}
+
+.category .left {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1.5rem;
+}
+
+.category .left img {
+    width: 3rem;
+    border-radius: 20px;
+}
+
+.content h2 {
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.content p {
+    color: rgb(61, 59, 59);
+    font-size: .8rem;
+    opacity: 0.6;
+}
+
+.category .options {
+    transition: all 0.3s;
+    border-radius: .5rem;
+    padding: .2rem .1rem;
+}
+
+.category .options:hover {
+    background-color: #ece4e4;
+    color: black;
+}
+
+.category .toggle-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 2rem;
+    font-size: 1.8rem;
+    color: #2c2b2b;
+}
+
+/* ===TASKS==== */
+.tasks-wrapper {
+    padding: 0 30px;
+    margin-top: 1rem;
+    height: calc(100%);
+    padding-bottom: 20px;
+    overflow: auto;
+
+}
+
+.tasks {
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    gap: 1rem;
+
+}
+
+.tasks-wrapper {
+    padding: 0 30px;
+    margin-top: 1rem;
+    height: calc(100%);
+    padding-bottom: 20px;
+    overflow: auto;
+
+}
+
+.task {
+    display: flex;
+    align-items: center;
+    font-size: .8rem;
+    font-weight: 500;
+    gap: .5rem;
+    width: max-content;
+    cursor: pointer;
+
+}
+
+.task input {
+    display: none;
+}
+
+.task .checkmark {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 2px;
+    border: 1px solid gray;
+}
+
+.checkmark i {
+    width: 1rem;
+    opacity: 0;
+    transition: all 0.3s;
+
+}
+
+.task:hover .checkmark i {
+    opacity: 1;
+}
+
+
+.task input:checked~.checkmark {
+    background-color: #2c2b2b;
+}
+    .task input:checked~.checkmark i {
+        opacity: 1;
+        color: #fff;
     }
 
-    .welcome {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 2rem;
-        padding: 20px;
-    }
-
-    .welcome h1 {
-        font-size: 1.5rem;
-        color: rgb(51, 47, 47);
-
-    }
-
-    .welcome p {
-        color: rgb(72, 66, 66);
-        margin-top: 20px;
-        font-weight: 500;
-    }
-
-    .welcome .img {
-        position: relative;
-    }
-
-    .welcome .img img {
-        width: 5rem;
-        border-radius: 50%;
-    }
-
-    .categories-wrapper {
-        height: calc(100% - 8rem);
-        padding: 0 30px;
-        padding-bottom: 20px;
-        overflow: auto;
-
-    }
-
-    .categories {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        padding: 1rem 0;
-        gap: .5rem;
-        margin: 3rem 0;
-
-    }
-
-    .categories .category {
-        background-color: #fff;
-        border-radius: .5rem;
-        padding: 1.5rem 1rem;
-        justify-content: space-between;
-        box-shadow: 0 10px 20px 5px #00000023;
-        transition: all .5s;
-    }
-
-    .categories .category:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 20px 5px #00000040;
-
-    }
-
-    .category .left {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 1.5rem;
-    }
-
-    .category .left img {
-        width: 3rem;
-        border-radius: 20px;
-    }
-
-    .content h2 {
-        font-weight: 500;
-        font-size: 32px;
-    }
-
-    .content p {
-        color: rgb(61, 59, 59);
-        font-size: .8rem;
+    .task input:checked~p {
+        text-decoration: line-through;
         opacity: 0.6;
-    }
-
-    .category .options {
-        transition: all 0.3s;
-        border-radius: .5rem;
-        padding: .2rem .1rem;
-    }
-
-    .category .options:hover {
-        background-color: #ece4e4;
-        color: black;
-    }
-
-    .category .toggle-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        width: 2rem;
-        font-size: 1.8rem;
-        color: #2c2b2b;
     }
