--- a/style.css
+++ b/style.css
@@ -263,13 +263,16 @@ body {
 
 }
 
-.tasks-wrapper {
-    padding: 0 30px;
+.task-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 20px;
     margin-top: 1rem;
-    height: calc(100%);
+    height: calc(100%) -12rem;
     padding-bottom: 20px;
     overflow: auto;
-
+    border: 1px solid;
 }
 
 .task {
@@ -312,12 +315,35 @@ body {
 .task input:checked~.checkmark {
     background-color: #2c2b2b;
 }
-    .task input:checked~.checkmark i {
-        opacity: 1;
-        color: #fff;
+
+.task input:checked~.checkmark i {
+    opacity: 1;
+    color: #fff;
+}
+
+.task input:checked~p {
+    text-decoration: line-through;
+    opacity: 0.6;
+}
+
+.task-wrapper .delete i {
+    font-size: 1.5rem;
+}
+    .task-wrapper .delete {
+        padding: 10px;
+        border-radius: 10px;
+        cursor: pointer;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s;
     }
 
-    .task input:checked~p {
-        text-decoration: line-through;
-        opacity: 0.6;
+
+    .task-wrapper:hover .delete {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .task-wrapper .delete:hover {
+        color: red;
     }
