--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 
 .wrapper.show-category .home-screen {
     transform: translateY(-100%);
-    
+
 }
 
 .wrapper.show-category .category-screen {
@@ -373,14 +373,21 @@ body {
     background-color: #34a797;
     color: #fff;
     transform: scale(1.1);
-    
+
 }
 
-.add-task{
+.add-task {
     position: absolute;
     bottom: 10px;
     left: 0;
     width: 100%;
     padding: 20px 30px;
-
+}
+.add-task .heading{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+.input-group{
+    position: relative;
+    margin-bottom: 1rem;
 }
