--- a/style.css
+++ b/style.css
@@ -378,16 +378,95 @@ body {
 
 .add-task {
     position: absolute;
-    bottom: 10px;
+    bottom: -100%;
     left: 0;
     width: 100%;
     padding: 20px 30px;
+    transition: all 0.3s;
 }
-.add-task .heading{
+
+.add-task.active {
+    bottom: 0;
+}
+
+.add-task .heading {
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
-.input-group{
+
+.input-group {
     position: relative;
     margin-bottom: 1rem;
+}
+
+.input-group input,
+.input-group label {
+    width: 100%;
+    display: block;
+}
+
+.input-group input,
+.input-group select {
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 12px;
+}
+
+.input-group label {
+    width: max-content;
+    padding: 10px 0px;
+    margin-bottom: 5px;
+}
+
+.btns {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.btns button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.btns button.add-btn {
+    background-color: aquamarine;
+    color: #000;
+}
+
+.add-task-backdrop {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 135%;
+    height: 20rem;
+    border-radius: 50% 50% 0 0;
+    transform: translate(-50%);
+    background-color: #fff;
+    border: 1px solid;
+}
+
+.black-backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    background-color: #00000023;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+}
+
+.black-backdrop.active{
+    opacity: 1;
+    visibility: visible;
 }
