--- a/style.css
+++ b/style.css
@@ -92,296 +92,302 @@ body {
     padding: 5px;
     align-items: center;
     justify-content: center;
-    border-radius: 20px;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 60px;
     color: rgb(36, 34, 34);
-    transition: all 0.3s;   
-}
-.menu-btn:hover{
-    background-color:#34a797;
-    color:#fff;
-}
-.category-screen .head-wrapper {
-    display: flex;
-    width: 90%;
-    justify-content: space-between;
-    align-items: center;
+    transition: all 0.3s;
 }
 
-.category-screen .head-wrapper .options {
-    font-size: 40px;
-    padding: 8px;
-    border-radius: .4rem;
-}
-
-.category-screen .head-wrapper .options:hover {
+.menu-btn:hover {
     background-color: #34a797;
     color: #fff;
 }
 
-.back-btn {
-    font-size: 50px;
-    color: rgb(252, 232, 7);
-    transition: .5s;
-    align-items: center;
-    justify-content: center;
-    display: flex;
+.menu-btn i:hover {
+    transform: scale(1.1);
 }
 
-.category-screen .head-wrapper .back-btn:hover {
-    border-radius: 2rem;
-    background-color: #fff;
-    color: black;
-    padding: 5px 20px;
-}
+    .category-screen .head-wrapper {
+        display: flex;
+        width: 90%;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-.category-details {
-    display: flex;
-    align-items: center;
-    padding: 0 30px;
-    gap: 1rem;
-}
+    .category-screen .head-wrapper .options {
+        font-size: 40px;
+        padding: 8px;
+        border-radius: .4rem;
+    }
 
-.category-details img {
-    width: 4rem;
-    border-radius: 50px;
-}
+    .category-screen .head-wrapper .options:hover {
+        background-color: #34a797;
+        color: #fff;
+    }
 
+    .back-btn {
+        font-size: 50px;
+        color: rgb(252, 232, 7);
+        transition: .5s;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
 
+    .category-screen .head-wrapper .back-btn:hover {
+        border-radius: 2rem;
+        background-color: #fff;
+        color: black;
+        padding: 5px 20px;
+    }
 
-.welcome {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
-    padding: 20px;
-}
+    .category-details {
+        display: flex;
+        align-items: center;
+        padding: 0 30px;
+        gap: 1rem;
+    }
 
-.welcome h1 {
-    font-size: 1.5rem;
-    color: rgb(51, 47, 47);
-
-}
-
-.welcome p {
-    color: rgb(72, 66, 66);
-    margin-top: 20px;
-    font-weight: 500;
-}
-
-.welcome .img {
-    position: relative;
-}
-
-.welcome .img img {
-    width: 5rem;
-    border-radius: 50%;
-}
-
-.categories-wrapper {
-    height: calc(100% - 8rem);
-    padding: 0 30px;
-    padding-bottom: 20px;
-    overflow: auto;
-
-}
-
-.categories {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 1rem 0;
-    gap: .5rem;
-    margin: 3rem 0;
-
-}
-
-.categories .category {
-    background-color: #fff;
-    border-radius: .5rem;
-    padding: 1.5rem 1rem;
-    justify-content: space-between;
-    box-shadow: 0 10px 20px 5px #00000023;
-    transition: all .5s;
-}
-
-.categories .category:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px 5px #00000040;
-
-}
-
-.category .left {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1.5rem;
-}
-
-.category .left img {
-    width: 3rem;
-    border-radius: 20px;
-}
-
-.content h2 {
-    font-weight: 500;
-    font-size: 32px;
-}
-
-.content p {
-    color: rgb(61, 59, 59);
-    font-size: .8rem;
-    opacity: 0.6;
-}
-
-.category .options {
-    transition: all 0.3s;
-    border-radius: .5rem;
-    padding: .2rem .1rem;
-}
-
-.category .options:hover {
-    background-color: #ece4e4;
-    color: black;
-}
-
-.category .toggle-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    width: 2rem;
-    font-size: 1.8rem;
-    color: #2c2b2b;
-}
-
-/* ===TASKS==== */
-.tasks-wrapper {
-    padding: 0 30px;
-    margin-top: 1rem;
-    height: calc(100%);
-    padding-bottom: 20px;
-    overflow: auto;
-
-}
-
-.tasks {
-    display: flex;
-    flex-direction: column;
-    padding-top: 1rem;
-    gap: 1rem;
-
-}
-
-.task-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 20px;
-    margin-top: 1rem;
-    height: calc(100%) -12rem;
-    padding-bottom: 20px;
-    overflow: auto;
-    border-radius: 10px;
-}
-
-.task-wrapper:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px 5px #00000040;
-}
-
-.task {
-    display: flex;
-    align-items: center;
-    font-size: .8rem;
-    font-weight: 500;
-    gap: .5rem;
-    width: max-content;
-    cursor: pointer;
-
-}
-
-.task input {
-    display: none;
-}
-
-.task .checkmark {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 2px;
-    border: 1px solid gray;
-}
-
-.checkmark i {
-    width: 1rem;
-    opacity: 0;
-    transition: all 0.3s;
-
-}
-
-.task:hover .checkmark i {
-    opacity: 1;
-}
+    .category-details img {
+        width: 4rem;
+        border-radius: 50px;
+    }
 
 
-.task input:checked~.checkmark {
-    background-color: #2c2b2b;
-}
 
-.task input:checked~.checkmark i {
-    opacity: 1;
-    color: #fff;
-}
+    .welcome {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 2rem;
+        padding: 20px;
+    }
 
-.task input:checked~p {
-    text-decoration: line-through;
-    opacity: 0.6;
-}
+    .welcome h1 {
+        font-size: 1.5rem;
+        color: rgb(51, 47, 47);
 
-.task-wrapper .delete i {
-    font-size: 1.5rem;
-}
+    }
 
-.task-wrapper .delete {
-    padding: 10px;
-    border-radius: 10px;
-    cursor: pointer;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s;
-}
+    .welcome p {
+        color: rgb(72, 66, 66);
+        margin-top: 20px;
+        font-weight: 500;
+    }
+
+    .welcome .img {
+        position: relative;
+    }
+
+    .welcome .img img {
+        width: 5rem;
+        border-radius: 50%;
+    }
+
+    .categories-wrapper {
+        height: calc(100% - 8rem);
+        padding: 0 30px;
+        padding-bottom: 20px;
+        overflow: auto;
+
+    }
+
+    .categories {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 1rem 0;
+        gap: .5rem;
+        margin: 3rem 0;
+
+    }
+
+    .categories .category {
+        background-color: #fff;
+        border-radius: .5rem;
+        padding: 1.5rem 1rem;
+        justify-content: space-between;
+        box-shadow: 0 10px 20px 5px #00000023;
+        transition: all .5s;
+    }
+
+    .categories .category:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px 5px #00000040;
+
+    }
+
+    .category .left {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1.5rem;
+    }
+
+    .category .left img {
+        width: 3rem;
+        border-radius: 20px;
+    }
+
+    .content h2 {
+        font-weight: 500;
+        font-size: 32px;
+    }
+
+    .content p {
+        color: rgb(61, 59, 59);
+        font-size: .8rem;
+        opacity: 0.6;
+    }
+
+    .category .options {
+        transition: all 0.3s;
+        border-radius: .5rem;
+        padding: .2rem .1rem;
+    }
+
+    .category .options:hover {
+        background-color: #ece4e4;
+        color: black;
+    }
+
+    .category .toggle-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        width: 2rem;
+        font-size: 1.8rem;
+        color: #2c2b2b;
+    }
+
+    /* ===TASKS==== */
+    .tasks-wrapper {
+        padding: 0 30px;
+        margin-top: 1rem;
+        height: calc(100%);
+        padding-bottom: 20px;
+        overflow: auto;
+
+    }
+
+    .tasks {
+        display: flex;
+        flex-direction: column;
+        padding-top: 1rem;
+        gap: 1rem;
+
+    }
+
+    .task-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 15px 20px;
+        margin-top: 1rem;
+        height: calc(100%) -12rem;
+        padding-bottom: 20px;
+        overflow: auto;
+        border-radius: 10px;
+    }
+
+    .task-wrapper:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px 5px #00000040;
+    }
+
+    .task {
+        display: flex;
+        align-items: center;
+        font-size: .8rem;
+        font-weight: 500;
+        gap: .5rem;
+        width: max-content;
+        cursor: pointer;
+
+    }
+
+    .task input {
+        display: none;
+    }
+
+    .task .checkmark {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 2px;
+        border: 1px solid gray;
+    }
+
+    .checkmark i {
+        width: 1rem;
+        opacity: 0;
+        transition: all 0.3s;
+
+    }
+
+    .task:hover .checkmark i {
+        opacity: 1;
+    }
 
 
-.task-wrapper:hover .delete {
-    visibility: visible;
-    opacity: 1;
-}
+    .task input:checked~.checkmark {
+        background-color: #2c2b2b;
+    }
 
-.task-wrapper .delete:hover {
-    color: red;
-}
+    .task input:checked~.checkmark i {
+        opacity: 1;
+        color: #fff;
+    }
 
-.add-task-btn {
-    padding: .2rem .5rem;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    background-color: aquamarine;
-    font-size: 50px;
-    border-radius: 50%;
-    bottom: 1rem;
-    right: 1rem;
-    transition: all 0.3s;
-}
+    .task input:checked~p {
+        text-decoration: line-through;
+        opacity: 0.6;
+    }
 
-.add-task-btn.active {
-    z-index: 1;
-    bottom: 20rem;
-    transform: rotate(45deg);
-}
+    .task-wrapper .delete i {
+        font-size: 1.5rem;
+    }
+
+    .task-wrapper .delete {
+        padding: 10px;
+        border-radius: 10px;
+        cursor: pointer;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s;
+    }
+
+
+    .task-wrapper:hover .delete {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .task-wrapper .delete:hover {
+        color: red;
+    }
+
+    .add-task-btn {
+        padding: .2rem .5rem;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        background-color: aquamarine;
+        font-size: 50px;
+        border-radius: 50%;
+        bottom: 1rem;
+        right: 1rem;
+        transition: all 0.3s;
+    }
+
+    .add-task-btn.active {
+        z-index: 1;
+        bottom: 20rem;
+        transform: rotate(45deg);
+    }
 
     .add-task-btn:hover {
         background-color: #34a797;
