--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ body {
     .category .left {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        /* justify-content: space-between; */
         gap: 1.5rem;
     }
 
