--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 100%;
+    padding: 10px 30px;
 }
 
 .category-screen .head-wrapper .options {
@@ -242,14 +243,14 @@ body {
 }
 
 .category .options {
-    display: flex;
+    display: flex; 
     align-items: center;
     justify-content: center;
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s;
-    background: wheat;
-    border-radius: 50px;
+    background: rgb(246, 243, 243);
+    border-radius: 10px;
 }
 
 .category:hover .options {
@@ -258,13 +259,10 @@ body {
 }
 
 .category .toggle-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     cursor: pointer;
-    width: 2rem;
+    padding: 0rem .4rem;
     font-size: 1.8rem;
-    opacity: .6;
+    opacity: .8;
 }
 
 /* ===TASKS ==== */
