--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .wrapper {
-    display: flex;
+    /* display: flex; */
     position: relative;
     height: 100vh;
     width: 100%;
@@ -35,7 +35,6 @@ body {
     .wrapper {
         height: 50rem;
         width: 25rem;
-        position: absolute;
         border-radius: 40px;
         border: 10px solid rgb(46, 44, 44);
     }
@@ -48,7 +47,7 @@ body {
     transition: all .3s;
 }
 
-.wrapper.show-category .home-screen {
+.wrapper.show-category .home-screen { 
     transform: translateY(-100%);
 }
 
@@ -59,8 +58,7 @@ body {
 .wrapper.show-category .screen-backdrop {
     transform: translate(-50%, -60%);
     border: 10px solid rgb(196, 226, 236);
-    background-color: rgb(150, 201, 199);
-
+    background-color: rgb(150, 201, 196);
 }
 
 .screen-backdrop {
@@ -110,6 +108,8 @@ body {
     align-items: center;
     width: 100%;
     padding: 10px 30px;
+
+
 }
 
 .category-screen .head-wrapper .options {
@@ -117,6 +117,7 @@ body {
     padding: 8px;
     border-radius: .4rem;
     transition: all .3s;
+
 }
 
 .category-screen .head-wrapper .options:hover {
@@ -132,6 +133,7 @@ body {
     color: rgb(252, 232, 7);
     transition: 1s;
     padding: 10px 30px;
+
  }
 
 .category-screen .head-wrapper .back-btn:hover {
