--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@
  }
 
  .wrapper {
-     display: flex;
-     position: relative;
+     position:relative;
      height: 100vh;
      width: 100%;
      overflow: hidden;
@@ -48,12 +47,12 @@
  }
 
  .wrapper.show-category .home-screen {
-     transform:translateY(-100%);
+     transform:translateX(-100%);
      
     }
     
     .wrapper.show-category .category-screen {
-     transform: translateY(-100%);
+     transform: translateX(-100%);
  }
 
  .wrapper.show-category .screen-backdrop {
@@ -69,7 +68,7 @@
      top: 0;
      left: 50%;
      z-index: -1;
-     transform: translate(-50%);
+     transform: translateX(-50%);
      border-radius: 0 0 50% 50%;
      background-color: aquamarine;
      border: 20px solid rgb(224, 235, 23);
