--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
  }
 
  .wrapper {
+    display: flex;
      position:relative;
      height: 100vh;
      width: 100%;
@@ -47,12 +48,12 @@
  }
 
  .wrapper.show-category .home-screen {
-     transform:translateX(-100%);
+     transform:translateY(-100%);
      
     }
     
     .wrapper.show-category .category-screen {
-     transform: translateX(-100%);
+     transform: translateY(-100%);
  }
 
  .wrapper.show-category .screen-backdrop {
