--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@
 
  .wrapper.show-category .screen-backdrop {
      transform: translate(-50%, -60%);
-     border: 10px solid rgb(196, 226, 236);
-     background-color: rgb(150, 201, 196);
+     border: 10px solid rgb(92, 252, 204);
+     background-color: #2df9dd;
  }
 
  .screen-backdrop {
@@ -74,6 +74,7 @@
      background-color: aquamarine;
      border: 20px solid rgb(224, 235, 23);
      transition: all .3s;
+
  }
 
  .head-wrapper {
