--- a/style.css
+++ b/style.css
@@ -282,12 +282,12 @@
      overflow: auto;
 
  }
- .no-task{
+ /* .no-task{
     margin-top: 5rem ;
     text-align: center;
     font-size: 1.5rem;
     opacity: .6;
- }
+ } */
 
  .tasks {
      display: flex;
