--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     width: 100%;
     overflow: hidden;
     padding: 30px 0;
+    
 }
 
 @media (min-width:768px) {
@@ -72,7 +73,7 @@ body {
     transform: translateX(-50%);
     border-radius: 0 0 50% 50%;
     background-color: aquamarine;
-    border: 20px solid rgb(224, 235, 23);
+    border: 15px solid rgb(224, 235, 23);
     transition: all .3s;
 
 }
@@ -191,10 +192,10 @@ body {
 
 .categories-wrapper {
     height: calc(100% - 8rem);
-    padding: 0 30px;
-    padding-bottom: 20px;
+    padding: 0px 20px;
+    padding-bottom: 10px;
     overflow: auto;
-    margin-top: 1rem;
+    margin-top: .5rem;
 
 }
 
@@ -202,18 +203,20 @@ body {
     display: flex;
     flex-direction: column;
     padding-top: 1rem;
-    gap: 1rem;
+    gap: .5rem;
 }
 
 .categories .category {
     display: flex;
     justify-content: space-between;
-    padding: 1.5rem 1rem;
-    background-color: #fff;
+    align-items: center;
+    padding: 20px 10px;
+    background-color: #fff; 
     border-radius: .5rem;
     box-shadow: 0 10px 20px 5px #00000023;
     transition: all .5s;
     cursor: pointer;
+
 }
 
 .categories .category:hover {
@@ -224,24 +227,27 @@ body {
 
 .category .left {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    gap: 1.5rem;
+    text-align: center;
+    gap: 4.5rem;
+    width: 100%;
 }
 
 .category .left img {
-    width: 3rem;
+    width: 50px;
     border-radius: 20px;
 }
 
 .category .content h2 {
     font-weight: 500;
-    font-size: 32px;
+    font-size: 20px;
+    
 }
 
 .category .content p {
     color: rgb(61, 59, 59);
-    font-size: .8rem;
+    font-size: 16px;
     opacity: 0.6;
 }
 
