--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     width: 100%;
     overflow: hidden;
     padding: 30px 0;
-    
+
 }
 
 @media (min-width:768px) {
@@ -211,7 +211,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px 10px;
-    background-color: #fff; 
+    background-color: #fff;
     border-radius: .5rem;
     box-shadow: 0 10px 20px 5px #00000023;
     transition: all .5s;
@@ -242,7 +242,7 @@ body {
 .category .content h2 {
     font-weight: 500;
     font-size: 20px;
-    
+
 }
 
 .category .content p {
@@ -283,7 +283,7 @@ body {
 .tasks-wrapper {
     padding: 0 30px;
     margin-top: 1rem;
-    height: calc(100%);
+    height: calc(100% - 12rem);
     padding-bottom: 20px;
     overflow: auto;
 
@@ -333,7 +333,11 @@ body {
 }
 
 .task input {
-    display: none;
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+
 }
 
 .task .checkmark {
@@ -517,4 +521,22 @@ body {
 .black-backdrop.active {
     opacity: 1;
     visibility: visible;
+}
+
+@media (max-width: 480px) {
+    .wrapper {
+        padding: 10px 0;
+    }
+
+    .category .left {
+        gap: 2rem;
+    }
+
+    .welcome h1 {
+        font-size: 1.2rem;
+    }
+
+    .add-task-btn {
+        font-size: 24px;
+    }
 }
