--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     height: 100vh;
     width: 100%;
     overflow: hidden;
-    padding: 30px 0;
+    padding: 50px 20px;
 
 }
 
@@ -38,6 +38,9 @@ body {
         width: 25rem;
         border-radius: 40px;
         border: 10px solid rgb(192, 196, 208);
+        box-shadow: 0 10px 20px 5px #00000023;
+        
+
     }
 
 }
@@ -204,6 +207,8 @@ body {
     flex-direction: column;
     padding-top: 1rem;
     gap: .5rem;
+    width: 100%;
+    margin-bottom: 2rem;
 }
 
 .categories .category {
@@ -216,6 +221,8 @@ body {
     box-shadow: 0 10px 20px 5px #00000023;
     transition: all .5s;
     cursor: pointer;
+    position: relative;
+    width: 100%; 
 
 }
 
