--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
         border-radius: 40px;
         border: 10px solid rgb(192, 196, 208);
         box-shadow: 0 10px 20px 5px #00000023;
-        
+
 
     }
 
@@ -49,6 +49,7 @@ body {
     flex: 1;
     min-width: 100%;
     transition: all .3s;
+    position: relative;
 }
 
 .wrapper.show-category .home-screen {
@@ -64,6 +65,7 @@ body {
     transform: translate(-50%, -60%);
     border: 10px solid rgb(92, 252, 204);
     background-color: #2df9dd;
+
 }
 
 .screen-backdrop {
@@ -78,6 +80,7 @@ body {
     background-color: aquamarine;
     border: 15px solid rgb(224, 235, 23);
     transition: all .3s;
+
 
 }
 
@@ -97,6 +100,7 @@ body {
     font-size: 30px;
     color: rgb(36, 34, 34);
     transition: all 0.3s;
+    
 }
 
 .menu-btn:hover {
