--- a/style.css
+++ b/style.css
@@ -39,8 +39,6 @@ body {
         border-radius: 40px;
         border: 10px solid rgb(192, 196, 208);
         box-shadow: 0 10px 20px 5px #00000023;
-
-
     }
 
 }
@@ -82,6 +80,7 @@ body {
     transition: all .3s;
 
 
+
 }
 
 .head-wrapper {
@@ -121,7 +120,8 @@ body {
 }
 
 .category-screen .head-wrapper .options {
-    font-size: 30px;
+    font-size: clamp(1rem, calc(7vw + 1rem), 1.2rem);
+    color: rgb(36, 34, 34);
     padding: 4px;
     border-radius: .4rem;
     transition: all .3s;
@@ -177,7 +177,8 @@ body {
 }
 
 .welcome h1 {
-    font-size: 1.5rem;
+    font-size: clamp(1.5rem, calc(7vw + 1rem), 1.5rem);
+    font-weight: 700;
     color: rgb(51, 47, 47);
 
 }
@@ -212,7 +213,7 @@ body {
     padding-top: 1rem;
     gap: .5rem;
     width: 100%;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .categories .category {
@@ -252,13 +253,15 @@ body {
 
 .category .content h2 {
     font-weight: 500;
-    font-size: 20px;
-
+    font-size: clamp(1.2rem, calc(7vw + 1rem), 1.5rem);
+    color: rgb(36, 34, 34);
+    
 }
 
 .category .content p {
     color: rgb(61, 59, 59);
-    font-size: 16px;
+    font-size: clamp(1rem, calc(7vw + 1rem), 1.2rem);
+    font-weight: 400;
     opacity: 0.6;
 }
 
@@ -335,7 +338,7 @@ body {
 .task {
     display: flex;
     align-items: center;
-    font-size: .8rem;
+    font-size: clamp(1rem, 1.5vw, 1.2rem);
     font-weight: 500;
     gap: .5rem;
     width: max-content;
@@ -420,7 +423,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: aquamarine;
-    font-size: 30px;
+    font-size: clamp(1.5rem, calc(7vw +1rem), 3rem);
     border-radius: 50%;
     transition: all 0.3s;
     display: flex;
@@ -495,6 +498,8 @@ body {
     border: none;
     outline: none;
     font-weight: 500;
+    font-size: clamp(1rem, calc(7vw + 1rem), 1.2rem);
+    color: #fff;
     cursor: pointer;
     transition: all 0.3s;
 }
@@ -534,7 +539,7 @@ body {
     visibility: visible;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
     .wrapper {
         padding: 10px 0;
     }
