--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 body {
     display: flex;
-    min-height: 100vh;
+    min-height: 100dvh;
     align-items: center;
     justify-content: center;
     background-color: #fff;
@@ -25,7 +25,7 @@ body {
 .wrapper {
     display: flex;
     position: relative;
-    height: 95vh;
+    height: 95dvh;
     width: 100%;
     overflow: hidden;
     padding: 50px 20px;
