--- a/style.css
+++ b/style.css
@@ -269,7 +269,8 @@ body {
 
 .category .left img {
     width: 50px;
-    height: auto;
+    height: 50px;
+    object-fit: cover;
     border-radius: 20px;
 }
 
